buildscript {
    ext {
        queryDslVersion = "5.0.0"
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version '2.6.8'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '11'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    configureEach {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.projectlombok:lombok:1.18.26'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // log4j2 ( 24.03-20 )
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'

    // test 코드에 대한 lombok 주입 ( test 시 log 에러 발생 때문에 - insertBoard() )
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // swagger ui ( 24.03.20 )
//    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
//    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
    // 파일 업로드 실패로 버전 업
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
    implementation 'io.springfox:springfox-swagger-ui:3.0.0'

    // validation ( 24.03.20 )
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // modelmapper ( 24.03.20 )
    implementation 'org.modelmapper:modelmapper:3.1.0'

    // Thymeleaf layout ( 24.03.21 )
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.1.0'
    // Thymeleaf java8time ( 24.03.21 )
    implementation group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-java8time', version: '3.0.4.RELEASE'

    // AOP 적용 ( 24.03.23 )
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // spring security (24.03.26 )
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // 타임리프에서 인증 정보 활용 ( 24.03.27 )
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'

    // Thumbnailator (24.03.29)
    implementation 'net.coobird:thumbnailator:0.4.16'

    // JPA-querydql start
    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"

    annotationProcessor(

            "javax.persistence:javax.persistence-api",

            "javax.annotation:javax.annotation-api",

            "com.querydsl:querydsl-apt:${queryDslVersion}:jpa")
    // JPA-querydql end


//    // JSTL ( 24.03.22 )
//    implementation group: 'jstl', name: 'jstl', version:'1.2'

    // 이미지 파일 라사이즈 를 위해 ( 24.07.19 )
    implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'

    // JWT 실습 ( 24.07.30 )
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

}

tasks.named('test') {
    useJUnitPlatform()
}

sourceSets {
    main {
        java {
            srcDirs = ["$projectDir/src/main/java", "$projectDir/build/generated"]
        }
    }
}